fix number cel teclado

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -328,7 +328,8 @@
                                             name="phone_number" 
                                             placeholder="Tu Whatsapp" 
                                             required 
-                                            pattern="^\+?[0-9]{9,}$" 
+                                            pattern="^\+?[0-9]{9,}$"
+                                            inputmode="numeric"
                                             title="Solo se permiten números y, opcionalmente, un '+' al inicio.">
                                         <label for="phone_number">(*) Whatsapp</label>
                                         <div class="invalid-feedback">
