--- a/templates/_base.html
+++ b/templates/_base.html
@@ -325,6 +325,7 @@
                                         <input type="text" 
                                             class="form-control form-control-sm" 
                                             id="phone_number" 
+                                            type="tel"
                                             name="phone_number" 
                                             placeholder="Tu Whatsapp" 
                                             required 
