--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -152,7 +152,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control" id="phone_number" name="phone_number" placeholder="Tu Whatsapp" pattern="^\+?[0-9]{9,}$" inputmode="numeric" required>
+                                    <input type="text" class="form-control" type="tel" id="phone_number" name="phone_number" placeholder="Tu Whatsapp" pattern="^\+?[0-9]{9,}$" inputmode="numeric" required>
                                     <label for="phone_number">(*) Whatsapp</label>
                                     <div class="invalid-feedback">
                                         Por favor, introduce tu número de WhatsApp.
